--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
   display: none;
 }
 
-/* Image gallery */
+/* Image gallery styles */
 .gallery {
   margin-top: 50px;
   text-align: center;
